--- a/data/nginx/app.conf.template
+++ b/data/nginx/app.conf.template
@@ -1,7 +1,22 @@
 server {
     listen 80;
-    listen 443 ssl;
+    server_name ${DOMAIN};
+    server_tokens off;
 
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+    location = /test {
+        return 200 ${DOMAIN};
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
     server_name ${DOMAIN};
 
     ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
