--- a/data/nginx/app.conf.template
+++ b/data/nginx/app.conf.template
@@ -1,4 +1,18 @@
 server {
+  listen 80;
+  listen 443 ssl;
+  server_name *.${DOMAIN};
+  server_tokens off;
+  
+  ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
+  include /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+  
+  return 301 https://${DOMAIN}$request_uri;
+}
+
+server {
     listen 80;
     server_name ${DOMAIN};
     server_tokens off;
@@ -15,6 +29,7 @@ server {
 server {
     listen 443 ssl;
     server_name ${DOMAIN};
+    server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
