--- a/site/.env
+++ b/site/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:nRNXjSDH79M5bKDFxTbhIqt2ctn99uGMyEYzyUwTNDA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,7 +10,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mongodb
 DB_HOST=127.0.0.1
 DB_PORT=27017
-DB_DATABASE=news2
+DB_DATABASE=testDB
+MONGO_COLLECTION=testArticles
 #DB_USERNAME=root
 #DB_PASSWORD=
 
