Docker Wildcard Certbot

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ DOMAIN=exempl.com
 
 DATABASE=automatic_news
 DATABASE_COLLECTION=articles
+
+CLOUDFLARE_EMAIL=you@exempl.com
+CLOUDFLARE_API_KEY=17ae93a8h2bf72ea4ga8hjef8de9099d22b5k
