--- a/data/nginx/app.conf.template
+++ b/data/nginx/app.conf.template
@@ -6,8 +6,8 @@ server {
   
   ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
-  include options-ssl-nginx.conf;
-  ssl_dhparam ssl-dhparams.pem;
+  include /etc/nginx/conf.d/options-ssl-nginx.conf;
+  ssl_dhparam /etc/nginx/conf.d/ssl-dhparams.pem;
   
   return 301 https://${DOMAIN}$request_uri;
 }
@@ -33,8 +33,8 @@ server {
 
     ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
-    include options-ssl-nginx.conf;
-    ssl_dhparam ssl-dhparams.pem;
+    include /etc/nginx/conf.d/options-ssl-nginx.conf;
+    ssl_dhparam /etc/nginx/conf.d/ssl-dhparams.pem;
 
     index index.php;
     root /var/www/public;
