sending news to telegram channel

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ DATABASE_COLLECTION=articles
 
 CLOUDFLARE_EMAIL=you@exempl.com
 CLOUDFLARE_API_KEY=17ae93a8h2bf72ea4ga8hjef8de9099d22b5k
+
+CHANNEL_ID=-1021460254697
+TELEGRAM_TOKEN=2659424969:AAEgCaxCSlOr5CDWHxsRZHSCD4CMKHIzcmf
