--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,5 +94,6 @@ services:
     restart: unless-stopped
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
     volumes:
+      - ./data/certbot/cloudflare.ini:/opt/cerbot/cloudflare.ini
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
