--- a/telegram/Dockerfile
+++ b/telegram/Dockerfile
@@ -5,6 +5,9 @@ WORKDIR /usr/src/app
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
+COPY supervisor /etc/supervisor/conf.d/
+RUN apt-get update && apt-get install -y supervisor
+
 COPY . .
 
-CMD [ "python", "./main.py" ]
+CMD ["/usr/bin/supervisord"]
