--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ CLOUDFLARE_API_KEY=17ae93a8h2bf72ea4ga8hjef8de9099d22b5k
 
 CHANNEL_ID=-1021460254697
 TELEGRAM_TOKEN=2659424969:AAEgCaxCSlOr5CDWHxsRZHSCD4CMKHIzcmf
+POST_ARTICLE_EVERY_SECONDS=300
